<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="17sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextAddress"
            android:layout_below="@+id/textViewAddress"
            android:inputType="text"
            android:layout_marginLeft="30dp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/textViewSquare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextAddress"
            android:text="@string/square"
            android:textSize="17sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSquare"
            android:inputType="number"
            android:layout_below="@+id/textViewSquare"
            android:layout_marginLeft="30dp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextSquare"
            android:text="@string/price"
            android:textSize="17sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPrice"
            android:inputType="number"
            android:layout_below="@+id/textViewPrice"
            android:layout_marginLeft="30dp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPrice"
            android:text="@string/info"
            android:textSize="17sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextInfo"
            android:inputType="text"
            android:layout_below="@+id/textViewInfo"
            android:layout_marginLeft="30dp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/textViewExtraInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextInfo"
            android:text="@string/extra_info"
            android:textSize="17sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextExtraInfo"
            android:inputType="text"
            android:layout_below="@+id/textViewExtraInfo"
            android:layout_marginLeft="30dp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/post_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/post_button"
            android:layout_below="@+id/editTextExtraInfo"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="#ffffff"
            android:background="#3d79b5"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/editTextExtraInfo"
            android:layout_toRightOf="@id/post_button"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel_button"
            android:textColor="#ffffff"
            android:background="#3d79b5"/>
    </RelativeLayout>

</ScrollView>
