<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <!--<include layout="@layout/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>-->

        <TextView
            android:id="@+id/textViewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="17sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUserName"
            android:layout_below="@+id/textViewUser"
            android:inputType="text"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:textColor="#000000"/>


        <TextView
            android:id="@+id/textViewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextUserName"
            android:text="@string/password"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:layout_below="@+id/textViewPass"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:textColor="#000000"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/button_login"
            android:textSize="15dp"
            android:layout_alignTop="@+id/editTextPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"
            android:text="@string/signin_button"
            android:textColor="#ffffff"
            android:background="#3d79b5"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:layout_alignTop="@+id/editTextPassword"
            android:layout_toRightOf="@id/button_login"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel_button"
            android:textColor="#ffffff"
            android:background="#3d79b5"/>

    </RelativeLayout>
</LinearLayout>
