<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textViewFilterSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tìm kiếm theo"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"/>

        <TextView
            android:id="@+id/textViewDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textSize="17sp"
            android:textColor="#000000"
            android:layout_below="@+id/textViewFilterSearch"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"/>

        <Spinner
            android:id="@+id/spinner_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_below="@+id/textViewDistrict"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="17sp"
            android:textColor="#000000"
            android:layout_below="@+id/spinner_district"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"/>

        <Spinner
            android:id="@+id/spinner_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_below="@+id/textViewPrice"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/search_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/search_button"
            android:layout_below="@+id/spinner_price"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="#ffffff"
            android:background="#3d79b5"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/spinner_price"
            android:layout_toRightOf="@id/search_button"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel_button"
            android:textColor="#ffffff"
            android:background="#3d79b5"/>

    </RelativeLayout>


</LinearLayout>